# ComposeNativeWebview

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish-on-maven.yml
demo/: build.gradle.kts
demo/src/jvmMain/kotlin/io/github/kdroidfilter/composewebview/: App.kt  main.kt
gradle/: libs.versions.toml
webview-compose/: build.gradle.kts
webview-compose/src/commonMain/kotlin/io/github/kdroidfilter/webview/setting/: WebSettings.kt
webview-compose/src/commonMain/kotlin/io/github/kdroidfilter/webview/util/: KLogger.kt
webview-compose/src/jvmMain/kotlin/io/github/kdroidfilter/webview/web/: WebViewDesktop.kt
wrywebview/: Cargo.toml  build.gradle.kts  uniffi.toml
wrywebview-compose/: README.md  build.gradle.kts
wrywebview-compose/src/jvmMain/kotlin/io/github/kdroidfilter/composewebview/: WebViewState.kt  WryWebView.kt
wrywebview/src/main/java/io/github/kdroidfilter/composewebview/wry/: SkikoInterop.java
wrywebview/src/main/kotlin/io/github/kdroidfilter/composewebview/wry/: WryWebViewPanel.kt
wrywebview/src/main/kotlin/io/github/kdroidfilter/webview/wry/: WryWebViewPanel.kt
wrywebview/src/main/rust/: handle.rs  lib.rs
wrywebview/src/main/rust/platform/: macos.rs
